add joist config and dependencies

--- a/api/fastify/package.json
+++ b/api/fastify/package.json
@@ -13,7 +13,10 @@
     "build:ts": "tsc",
     "watch:ts": "tsc -w",
     "dev": "pnpm run build:ts && concurrently -k -p \"[{name}]\" -n \"TypeScript,App\" -c \"yellow.bold,cyan.bold\" \"npm:watch:ts\" \"npm:dev:start\"",
-    "dev:start": "fastify start --ignore-watch=.ts$ -w -l info -P dist/app.js"
+    "dev:start": "fastify start --ignore-watch=.ts$ -w -l info -P dist/app.js",
+    "joist-codegen": "pnpx tsx ./node_modules/joist-codegen",
+    "joist-migrate": "pnpx tsx ./node_modules/joist-migration-utils",
+    "joist-new-migration": "pnpx node-pg-migrate create"
   },
   "keywords": [],
   "author": "",
@@ -24,13 +27,19 @@
     "@fastify/swagger": "^9.4.2",
     "fastify": "^5.0.0",
     "fastify-cli": "^7.4.0",
-    "fastify-plugin": "^5.0.0"
+    "fastify-plugin": "^5.0.0",
+    "joist-orm": "^1.235.0",
+    "knex": "^3.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.1.0",
     "c8": "^10.1.2",
     "concurrently": "^9.0.0",
     "fastify-tsconfig": "^3.0.0",
+    "joist-codegen": "^1.235.0",
+    "joist-migration-utils": "^1.235.0",
+    "joist-utils": "^1.235.0",
+    "node-pg-migrate": "^7.9.1",
     "ts-node": "^10.4.0",
     "typescript": "~5.8.2"
   },
