--- a/api/fastify/joist-config.json
+++ b/api/fastify/joist-config.json
@@ -1,1 +1,1 @@
-{ "entities": { "User": { "tag": "u" } }, "entitiesDirectory": "./src/entities", "version": "1.235.0" }
+{ "entities": { "User": { "tag": "u" } }, "entitiesDirectory": "./src/entities", "esm": true, "version": "1.235.0" }
