--- a/api/fastify/package.json
+++ b/api/fastify/package.json
@@ -9,6 +9,7 @@
   },
   "scripts": {
     "test": "pnpm run build:ts && tsc -p test/tsconfig.json && FASTIFY_AUTOLOAD_TYPESCRIPT=1 node --test --experimental-test-coverage --loader ts-node/esm test/**/*.ts",
+    "vitest": "FASTIFY_AUTOLOAD_TYPESCRIPT=1 vitest",
     "start": "pnpm run build:ts && fastify start -l info dist/app.js",
     "build:ts": "tsc",
     "watch:ts": "tsc -w",
@@ -41,7 +42,8 @@
     "joist-utils": "^1.235.0",
     "node-pg-migrate": "^7.9.1",
     "ts-node": "^10.4.0",
-    "typescript": "~5.8.2"
+    "typescript": "~5.8.2",
+    "vitest": "^3.1.1"
   },
   "packageManager": "pnpm@10.8.0+sha512.0e82714d1b5b43c74610193cb20734897c1d00de89d0e18420aebc5977fa13d780a9cb05734624e81ebd81cc876cd464794850641c48b9544326b5622ca29971"
 }
