--- a/api/fastify/package.json
+++ b/api/fastify/package.json
@@ -8,8 +8,9 @@
     "test": "test"
   },
   "scripts": {
-    "test": "pnpm run build:ts && tsc -p test/tsconfig.json && FASTIFY_AUTOLOAD_TYPESCRIPT=1 node --test --experimental-test-coverage --loader ts-node/esm test/**/*.ts",
-    "vitest": "FASTIFY_AUTOLOAD_TYPESCRIPT=1 vitest",
+    "db": "docker compose up --wait db && pnpm joist-migrate && pnpm joist-codegen",
+    "redb": "docker compose exec db ./reset.sh && pnpm joist-migrate && pnpm joist-codegen",
+    "test": "FASTIFY_AUTOLOAD_TYPESCRIPT=1 vitest",
     "start": "pnpm run build:ts && fastify start -l info dist/app.js",
     "build:ts": "tsc",
     "watch:ts": "tsc -w",
